[package]
name = "bulletml"
version = "0.1.0"
authors = ["jmbto <kagekyio@gmail.com>"]

[dependencies]
xml-rs = "*"
[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"
[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"
[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"
[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[[bin]]
name = "papars"
path = "src/xmlparse.rs"
